[gd_scene load_steps=44 format=3 uid="uid://cyujmksfffet"]

[ext_resource type="Script" uid="uid://uwyb0fvd6pvg" path="res://Scripts/map.gd" id="1_vpest"]
[ext_resource type="Resource" uid="uid://df37gonu46vbl" path="res://Resources/MapSpots/CitySpots/Villages.tres" id="3_utnqo"]
[ext_resource type="Resource" uid="uid://du24ilvkea51x" path="res://Resources/MapSpots/CitySpots/CityCenter.tres" id="4_tftes"]
[ext_resource type="Resource" uid="uid://dyvpncg7tolc7" path="res://Resources/MapSpots/CitySpots/CapitalCityCenter.tres" id="5_6an1p"]
[ext_resource type="Resource" uid="uid://1vptbvrlos7" path="res://Resources/MapSpots/CitySpots/FinalCity.tres" id="6_tftes"]
[ext_resource type="PackedScene" uid="uid://dgf0r7r507qef" path="res://Scenes/Towns/Town.tscn" id="7_0ker0"]
[ext_resource type="PackedScene" uid="uid://dp3qdp4mcnmly" path="res://Scenes/tutorial_trigger.tscn" id="9_6an1p"]
[ext_resource type="PackedScene" uid="uid://kwr75a1p3qrm" path="res://Scenes/Enemies/Hostile_Patrol.tscn" id="11_323je"]
[ext_resource type="Script" uid="uid://cu4b2l2v0wida" path="res://Scripts/ship_camera.gd" id="11_a2ujk"]
[ext_resource type="Resource" uid="uid://c1buiwym6qkh8" path="res://Resources/Captains/EnemyCaptains/EnemySpawnDecider.tres" id="12_m1k6s"]
[ext_resource type="Texture2D" uid="uid://bx5jb0eqim37w" path="res://Assets/Sand/Snow004_1K-PNG_NormalGL.png" id="13_6an1p"]
[ext_resource type="Texture2D" uid="uid://bs53j7ii6wra" path="res://Assets/Sand/Ice003_1K-PNG_NormalGL.png" id="14_a2ujk"]
[ext_resource type="Texture2D" uid="uid://dvky5ro1x854j" path="res://Assets/Sand/Ice003_1K-PNG_Color.png" id="14_h7q0i"]
[ext_resource type="Shader" uid="uid://bg5g4a5taibb2" path="res://Shaders/clouds.gdshader" id="15_a2ujk"]
[ext_resource type="Texture2D" uid="uid://boe6676mcgik8" path="res://Assets/Sand/Snow004_1K-PNG_Color.png" id="15_h7q0i"]
[ext_resource type="PackedScene" uid="uid://cja47tyjnyae" path="res://Scenes/MapMarkers/map_line_drawer.tscn" id="16_sp82o"]
[ext_resource type="PackedScene" uid="uid://dhr5epkvjl588" path="res://Scenes/MapShips/player_ship.tscn" id="17_21a23"]
[ext_resource type="Shader" uid="uid://c04tnhxowl25v" path="res://Shaders/ground.gdshader" id="18_x3wib"]
[ext_resource type="Script" uid="uid://c1kbreeob7tf2" path="res://Scripts/UI/map_pointer_manager.gd" id="19_ccpfd"]
[ext_resource type="PackedScene" uid="uid://c3l8v8l2e2pkt" path="res://Scenes/MapMarkers/ShipMarker.tscn" id="20_anlpp"]
[ext_resource type="PackedScene" uid="uid://bgsgcnyyv1gxm" path="res://Scenes/Map/MapSpotMarker.tscn" id="21_oyi6l"]
[ext_resource type="Script" uid="uid://c2ufjbkhk6v0q" path="res://Scripts/UI/CircleDrawer.gd" id="22_fa7wu"]
[ext_resource type="Resource" uid="uid://056ui1umqqh0" path="res://Resources/EventHandlers/ShipControllerEventHandler.tres" id="22_n73so"]
[ext_resource type="PackedScene" uid="uid://buj48d65j7y07" path="res://Scenes/InScreenUI/in_screen_ui.tscn" id="23_53oad"]
[ext_resource type="PackedScene" uid="uid://biel8sjt8vy5t" path="res://Scenes/ScreenUI/screen_ui.tscn" id="24_e5um8"]
[ext_resource type="Resource" uid="uid://dblsu2gs81rs6" path="res://Resources/EventHandlers/UIEventH.tres" id="25_8mjbw"]
[ext_resource type="AudioStream" uid="uid://bwi4dj7l6pjg1" path="res://Assets/Sounds/Static.wav" id="26_h7q0i"]
[ext_resource type="Material" uid="uid://dxt6oe4rhk3du" path="res://Shaders/ColorIndex.tres" id="28_x3wib"]

[sub_resource type="Curve" id="Curve_rghuw"]
_limits = [0.0, 5.0, 0.0, 1.0]
_data = [Vector2(0, 5), 0.0, 3.3398, 0, 0]
point_count = 1

[sub_resource type="Gradient" id="Gradient_x3wib"]
offsets = PackedFloat32Array(0, 0.791667, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.559888, 0.559888, 0.559887, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_a2ujk"]
gradient = SubResource("Gradient_x3wib")

[sub_resource type="Environment" id="Environment_28wu2"]
background_mode = 3
background_canvas_max_layer = 2
ambient_light_source = 1
reflected_light_source = 1
tonemap_mode = 3
tonemap_exposure = 1.2
tonemap_white = 16.0
glow_levels/1 = 16.0
glow_levels/3 = 0.0
glow_levels/5 = 0.0
glow_normalized = true
glow_intensity = 1.0
glow_strength = 0.5
glow_mix = 0.825
glow_bloom = 0.63
glow_map_strength = 1.0
adjustment_enabled = true
adjustment_brightness = 1.3
adjustment_contrast = 0.8
adjustment_color_correction = SubResource("GradientTexture1D_a2ujk")

[sub_resource type="World3D" id="World3D_x3wib"]
environment = SubResource("Environment_28wu2")

[sub_resource type="Gradient" id="Gradient_eb1s8"]
offsets = PackedFloat32Array(0.52029, 0.550725)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_eb1s8"]
noise_type = 3
frequency = 0.0035
cellular_distance_function = 2
cellular_return_type = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_445lv"]
width = 1024
height = 1024
seamless = true
seamless_blend_skirt = 1.0
color_ramp = SubResource("Gradient_eb1s8")
noise = SubResource("FastNoiseLite_eb1s8")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_28wu2"]
shader = ExtResource("18_x3wib")
shader_parameter/GroundTexture = ExtResource("14_h7q0i")
shader_parameter/GroundTexture2 = ExtResource("15_h7q0i")
shader_parameter/NoiseTexture = SubResource("NoiseTexture2D_445lv")
shader_parameter/GroundNormalTexture = ExtResource("14_a2ujk")
shader_parameter/GroundNormal2Texture = ExtResource("13_6an1p")
shader_parameter/NormalD = 1.0
shader_parameter/offset = Vector2(0, 0)
shader_parameter/Scale1 = Vector2(10, 10)
shader_parameter/Scale2 = Vector2(20, 20)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_a2ujk"]
noise_type = 5
frequency = 0.0085
fractal_lacunarity = 5.77
fractal_weighted_strength = 1.0
domain_warp_enabled = true
domain_warp_frequency = 0.015

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_1lxys"]
seamless = true
noise = SubResource("FastNoiseLite_a2ujk")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x3wib"]
shader = ExtResource("15_a2ujk")
shader_parameter/noise_texture = SubResource("NoiseTexture2D_1lxys")
shader_parameter/density = 3.0
shader_parameter/speed = Vector2(0.03, -0.01)
shader_parameter/offset = Vector2(0, 0)
shader_parameter/custom_time = 0.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_rrndq"]
light_mode = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ujsvm"]
bg_color = Color(0.066982, 0.133257, 0.137998, 1)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_w8yg2"]
light_mode = 1

[node name="Map" type="CanvasLayer" node_paths=PackedStringArray("_InScreenUI", "_ScreenUI", "_Camera")]
layer = 0
follow_viewport_enabled = true
script = ExtResource("1_vpest")
_InScreenUI = NodePath("SubViewportContainer/ViewPort/InScreenUI")
_ScreenUI = NodePath("ScreenUI")
_Camera = NodePath("SubViewportContainer/ViewPort/SubViewportContainer/SubViewport/ShipCamera")
TownSpotScene = ExtResource("7_0ker0")
VillageSpotType = ExtResource("3_utnqo")
CitySpotType = ExtResource("4_tftes")
CapitalSpotType = ExtResource("5_6an1p")
FinalCitySpotType = ExtResource("6_tftes")
MapSize = 100
MapGenerationDistanceCurve = SubResource("Curve_rghuw")
EnemyScene = ExtResource("11_323je")
EnSpawner = ExtResource("12_m1k6s")
EnemyShipNames = Array[String](["Mirage", "Sirocco", "Anubis", "Scimitar", "Horus", "Falcon", "Ibex", "Zahara", "Sandstorm", "Scarab", "Oasis", "Dune", "Caravan", "Oryx", "Phoenix", "Djinn", "Aswan", "Sphinx", "Seraph", "Ziggurat", "Bedouin", "Qasr", "Simoon", "Palmyra", "Cobra", "Ishtara", "Hibiscus", "Maham", "Amon", "Selket", "Citadel", "Baobab", "Solstice", "Magi", "Olive", "Mecca", "Pyramid", "Zerda", "Ghibli", "Siwa", "Sahara", "Ra", "Nebula", "Ishtar", "Giza", "Camelot", "Zephyr", "Lybian", "Nubian", "Babylon", "Lotus", "Emir", "Acacia", "Jasmine", "Cumin", "Balsam", "Arash", "Ibri", "Zahir", "Alamut", "Petra", "Khanjar", "Tamrin", "Mamluk", "Souq", "Sinai", "Aqaba", "Argan", "Almaza", "Akasha", "Valley", "Shamal", "Halva", "Desert Rose", "Gazelle", "Myrrh", "Qatar", "Atlas", "Palma", "Hamsin", "Sultan", "Amira", "Basil", "Kahina", "Masira", "Alchemy", "Selene", "Sabiya", "Kurdemir", "Eunice", "Zenobia", "Azeez", "Farah", "Yasmine", "Arun", "Soraya", "Nahyan", "Layla", "Arash", "Zareen", "Ghaith", "Samir", "Rasha", "Dariya", "Pearl", "Dhalia", "Rania", "Lapis", "Magma", "Azure", "Ammonite", "Coral", "Kubra", "Rayan", "Malik", "Tarik", "Zamzam", "Wadi", "Casbah", "Fennec", "Raidan", "Farida", "Nassir", "Amani", "Badiya", "Jabari", "Kabira", "Thal", "Fajr", "Khamsin", "Wilayat", "Bahira", "Ameer", "Buraq", "Kamal", "Mashaal", "Najma", "Furat", "Tasnim", "Qamar", "Zafira", "Rimal", "Nilufar", "Naima", "Jazira", "Asad", "Rahma", "Haitham", "Amir", "Yasir", "Zein", "Tarab", "Saba", "Bakr", "Mahtab", "Sharif", "Nizwa", "Rashid", "Alia", "Farzin", "Parveen", "Qasim", "Tariq", "Samara", "Nadir", "Sidra", "Yasmina", "Zohar", "Jalal", "Rumi", "Faiz", "Azar", "Jannah", "Kamal", "Zafir", "Laila", "Mahira", "Idris", "Hadi", "Adil", "Soraya", "Zayna", "Elham", "Malika", "Riad", "Ishmael", "Halima", "Munir", "Zubair", "Aya", "Zainab", "Karam", "Basim", "Munira", "Faris", "Safira", "Maalik", "Najwa", "Aziz", "Kawthar", "Marwan", "Zara", "Fadia", "Ihsan", "Jamil", "Arwa", "Nasim", "Sadiq", "Rabia", "Hakim", "Najib", "Salma", "Firdaus", "Anwar", "Tahira", "Karim", "Leila", "Subhi", "Nouf", "Saeed", "Rami", "Aaliyah", "Emira", "Tariqa", "Zia", "Naima", "Khalid", "Nour", "Uzma", "Hudhayfa", "Nabi", "Afreen", "Masoud", "Zulekha", "Rabi", "Aziza", "Harith", "Inara", "Sami", "Baqir", "Noor", "Sabrin", "Lamis", "Jafar", "Ghadir", "Farouq", "Ilhaam", "Nadim", "Hania", "Shadi", "Ziad", "Khalifa", "Amal", "Rashaad", "Sanaa", "Zayd", "Nawal", "Ehsan", "Tasneem", "Rashida", "Haleem", "Jasir", "Nihal", "Fathi", "Adnan", "Ghada", "Firdos", "Hajar", "Asma", "Abdul", "Qamar", "Mahmud", "Ruqayya", "Lutfi", "Noorani", "Qudsiya", "Salim", "Fawzi", "Ishraq", "Warda", "Issam", "Jinan", "Latif", "Nabeeha", "Mashal", "Asrar", "Hilal", "Badr", "Waleed", "Ramla", "Sohail", "Yasir", "Wasim", "Nizar", "Abira", "Nashwa", "Fahad", "Tamer", "Razan", "Azim", "Tariq", "Maysa", "Rafiq", "Safwan", "Zayn", "Nadira", "Amir", "Hana", "Mustafa", "Qusay", "Tarik", "Rihana", "Ayman", "Lutfullah", "Batool", "Majid", "Nisrin", "Bahir", "Omran", "Salma", "Bilal", "Wardah", "Haifa", "Firas", "Ghazal", "Jawad", "Sameera", "Razan", "Aseel", "Gibran", "Isra", "Najla", "Khalil", "Siham", "Raed", "Anisa", "Farouk", "Najwa", "Qadir", "Shaima", "Jabir", "Tazeen", "Bayan", "Bashir", "Lubna", "Moin", "Saleh", "Hadiyah", "Yazan", "Tahir", "Malikah", "Zubaydah", "Fareed", "Saladin", "Yasmina", "Iqbal", "Faridah", "Munif", "Qadira", "Yousuf", "Shakira", "Badia", "Talal", "Zayda", "Hashem", "Nourah", "Zaher", "Liyana", "Sadiyah", "Ihab", "Hawra", "Lutfiya", "Mufeed", "Amirah", "Nasira", "Gheida", "Mahrez", "Abir", "Zuhair", "Salsabil", "Yasin", "Maitha", "Aadil", "Noorul", "Rashad", "Layla", "Wasila", "Adeem", "Nahed", "Burhan", "Halimah", "Arib", "Fayrouz", "Wafaa", "Nasib", "Ghada", "Tousif", "Salwa", "Muhsin", "Hamida", "Amani", "Tariqa", "Amal", "Darwish", "Falaah", "Hisaan", "Adara", "Bassam", "Hareem", "Maher", "Ramzi", "Dalia", "Azlan", "Hana", "Lamis", "Mithqal", "Shadi", "Yara", "Munir", "Tali", "Fadi", "Malak", "Suha", "Jasmin", "Anwar", "Layth", "Bilqis", "Issa", "Mufeed", "Rima", "Sahar", "Areeb", "Masoud", "Sahil", "Mahdi", "Salha", "Taif", "Hajjar", "Adila", "Ghanim", "Lubna", "Waleed", "Haneen", "Nousha", "Khalida", "Jameel", "Fatima", "Nuha", "Aseel", "Rafeeq", "Qamar", "Najib", "Salim", "Tariq", "Nadira", "Shahin", "Ziad", "Liyana", "Raheel", "Tareq", "Zulfiqar", "Asbah", "Radiya", "Zafir", "Samia", "Khalil", "Vaseema", "Mirza", "Noor", "Diya", "Munira", "Zakir", "Dalal", "Sufyan", "Naheed", "Yasmin", "Ghaydaa", "Shareef", "Darin", "Inaya", "Nour", "Jumana", "Ihsan", "Kamal", "Dania", "Hasnain", "Zuleika", "Laith", "Shahira", "Rohan", "Amara", "Thamer", "Muhannad", "Tahani", "Aladdin", "Saeeda", "Zain", "Talib", "Bahira", "Soraya"])
TutorialTrigger = ExtResource("9_6an1p")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 67.0
offset_top = 62.0
offset_right = -344.0
offset_bottom = -63.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="ViewPort" type="SubViewport" parent="SubViewportContainer"]
process_mode = 1
disable_3d = true
own_world_3d = true
world_3d = SubResource("World3D_x3wib")
handle_input_locally = false
snap_2d_vertices_to_pixel = true
audio_listener_enable_2d = true
positional_shadow_atlas_size = 512
size = Vector2i(869, 595)
render_target_update_mode = 4

[node name="SubViewportContainer" type="SubViewportContainer" parent="SubViewportContainer/ViewPort"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
stretch_shrink = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer/ViewPort/SubViewportContainer"]
disable_3d = true
own_world_3d = true
handle_input_locally = false
snap_2d_vertices_to_pixel = true
audio_listener_enable_2d = true
positional_shadow_atlas_size = 0
positional_shadow_atlas_16_bits = false
size = Vector2i(434, 297)
render_target_update_mode = 4

[node name="Darkness" type="CanvasModulate" parent="SubViewportContainer/ViewPort/SubViewportContainer/SubViewport"]
color = Color(0, 0, 0, 1)

[node name="RoadLineDrawer" parent="SubViewportContainer/ViewPort/SubViewportContainer/SubViewport" instance=ExtResource("16_sp82o")]
modulate = Color(1, 1, 1, 0.5)
z_index = -1
RoadLines = true

[node name="MapSpots" type="Node2D" parent="SubViewportContainer/ViewPort/SubViewportContainer/SubViewport"]

[node name="ShipCamera" type="Camera2D" parent="SubViewportContainer/ViewPort/SubViewportContainer/SubViewport" node_paths=PackedStringArray("Background", "Cloud", "Ground") groups=["Clock"]]
position = Vector2(576, 324)
process_callback = 0
position_smoothing_enabled = true
script = ExtResource("11_a2ujk")
Background = NodePath("DarkBlueBackground")
Cloud = NodePath("Clouds")
Ground = NodePath("Ground")

[node name="Ground" type="ColorRect" parent="SubViewportContainer/ViewPort/SubViewportContainer/SubViewport/ShipCamera"]
z_index = -3
material = SubResource("ShaderMaterial_28wu2")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -766.0
offset_top = -775.0
offset_right = 734.0
offset_bottom = 725.0
grow_horizontal = 2
grow_vertical = 2

[node name="Clouds" type="ColorRect" parent="SubViewportContainer/ViewPort/SubViewportContainer/SubViewport/ShipCamera"]
material = SubResource("ShaderMaterial_x3wib")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -766.0
offset_top = -775.0
offset_right = 734.0
offset_bottom = 725.0
grow_horizontal = 2
grow_vertical = 2

[node name="DarkBlueBackground" type="Panel" parent="SubViewportContainer/ViewPort/SubViewportContainer/SubViewport/ShipCamera"]
modulate = Color(1, 1, 1, 0)
material = SubResource("CanvasItemMaterial_rrndq")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -15000.0
offset_top = -15000.0
offset_right = 15000.0
offset_bottom = 15000.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ujsvm")

[node name="PlayerShip" parent="SubViewportContainer/ViewPort/SubViewportContainer/SubViewport" instance=ExtResource("17_21a23")]
position = Vector2(126.5, 154.5)

[node name="MapPointerManager" type="Node2D" parent="SubViewportContainer/ViewPort/SubViewportContainer/SubViewport" node_paths=PackedStringArray("MapLonePos")]
z_index = 100
material = SubResource("CanvasItemMaterial_w8yg2")
script = ExtResource("19_ccpfd")
MapLonePos = NodePath("MapLines")
MarkerScene = ExtResource("20_anlpp")
MapSpotMarkerScene = ExtResource("21_oyi6l")
FriendlyColor = Color(0.483, 100, 0.381, 1)
EnemyColor = Color(100, 0.094, 0, 1)
ConvoyColor = Color(100, 0.764, 0.081, 1)
UIEventH = ExtResource("25_8mjbw")
ControllerEventHandler = ExtResource("22_n73so")

[node name="MapLines" type="Node2D" parent="SubViewportContainer/ViewPort/SubViewportContainer/SubViewport/MapPointerManager"]
use_parent_material = true

[node name="MapLineDrawer" parent="SubViewportContainer/ViewPort/SubViewportContainer/SubViewport/MapPointerManager" instance=ExtResource("16_sp82o")]
ResizeLinesWithZoom = true

[node name="CircleDrawer" type="Node2D" parent="SubViewportContainer/ViewPort/SubViewportContainer/SubViewport/MapPointerManager" groups=["LineMarkers"]]
use_parent_material = true
script = ExtResource("22_fa7wu")
ShipControllerEvent = ExtResource("22_n73so")
Col = Color(100, 0.395, 0.144, 1)

[node name="InScreenUI" parent="SubViewportContainer/ViewPort" instance=ExtResource("23_53oad")]
layer = 3

[node name="ScreenUI" parent="." instance=ExtResource("24_e5um8")]

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("26_h7q0i")
autoplay = true

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 3
follow_viewport_enabled = true

[node name="Screen" type="ColorRect" parent="CanvasLayer2"]
process_mode = 3
z_index = 1
material = ExtResource("28_x3wib")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="GUI_Input" from="SubViewportContainer/ViewPort/InScreenUI" to="." method="_MAP_INPUT"]
